syntax = "proto3";

package events.file;
option go_package = "geevly/eda";

import "metadata.proto";
import "google/protobuf/timestamp.proto";

// File represents a file in the system and commands, events, and responses that are associated with files.
message File {
    string name = 1; // The name of the file
    string domain_reference_old = 2; // DEPRECATED Reference to the domain or context this file belongs to
    DomainReference domain_reference = 9;
    string mime_type = 3; // The MIME type of the file
    int64 size = 4; // The size of the file in bytes
    string extension = 5; // The file extension
    events.metadata.Metadata metadata = 6;
    reserved 7;
    bool deleted = 8; // Whether the file has been logically deleted

    enum DomainReference {
        UNKNOWN = 0;
        STUDENT_PROFILE_PHOTO = 1;
        FEEDING_TEMPORARY = 2;
        FEEDING_HISTORY = 3;
        BULK_UPLOAD = 4;
    }

    message Create {
        string name = 1;
        DomainReference domain_reference = 2;
        string mime_type = 3;
        int64 size = 4;
        string extension = 5;

        events.metadata.Metadata metadata = 6;

        message Event {
            string name = 1;
            DomainReference domain_reference = 2;
            string mime_type = 3;
            int64 size = 4;
            string extension = 5;
            events.metadata.Metadata metadata = 7;
        }
    }

    message Delete {
        string id = 1;
        events.metadata.Metadata metadata = 2;
        uint64 version = 3;
        string domain_reference = 4; // Reference to the domain or context this file belongs to

        message Event {
            events.metadata.Metadata metadata = 1;
        }
    }
}
