syntax = "proto3";
package events.school;
option go_package = "geevly/eda";

import "metadata.proto";

message School {
  string name = 1;
  string principal = 2;
  string contact = 3;
  bool disabled = 4;
  string country = 5;
  string city = 6;
  MonthDay school_end = 7;
  MonthDay school_start = 8;

  message MonthDay {
    uint32 month = 1;
    uint32 day = 2;
  }

  message Create {
    string name = 1;
    string principal = 2;
    string contact = 3;
    events.metadata.Metadata metadata = 4;
    string country = 5;
    string city = 6;

    message Event {
      string name = 1;
      string principal = 2;
      string contact = 3;
      string country = 4;
      string city = 5;
    }

    message Response {
      uint64 id = 1;
      School school = 2;
    }
  }

  message Update {
    uint64 id = 1;
    string name = 2;
    string principal = 3;
    string contact = 4;
    events.metadata.Metadata metadata = 5;
    uint64 version = 6;
    string country = 7;
    string city = 8;

    message Event {
      uint64 id = 1;
      string name = 2;
      string principal = 3;
      string contact = 4;
      string country = 5;
      string city = 6;
    }

    message Response {
      uint64 id = 1;
      School school = 2;
    }
  }

  message SetSchoolPeriod {
  	uint64 id = 1;
  	MonthDay school_end = 2;
  	MonthDay school_start = 3;
  	uint64 version = 4;

  	message Event {
  		uint64 id = 1;
  		MonthDay school_end = 2;
  		MonthDay school_start = 3;
  	}

  	message Response {
  		uint64 id = 1;
  		School school = 2;
  	}
  }
}
